--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             /* Brown gradient background 
             background-image: linear-gradient(to bottom right, rgb(76, 50, 41), rgb(209, 120, 85)); 
             */
-            background-image: linear-gradient(to bottom right, rgb(51, 40, 74), rgb(255, 134, 162));
+            background-image: linear-gradient(to bottom right, rgb(244, 244, 186), rgb(197, 221, 84));
         }
 
         .content {
@@ -18,13 +18,13 @@
             font-size: 120%;
             font-family: 'Courier New';
             line-height: 1.2;
-            color: #ffffff;
+            color: #4B1F73;
         }
     </style>
 </head>
 
 <body>
-    <p>&#11088</p>
+    <p>&#x1F496</p>
     <div class="content">
         <script language="JavaScript">
             var r_text = new Array();
