--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             padding-right: 30px;
             padding-bottom: 30px;
             padding-left: 30px;
-            font-size: 120%;
+            font-size: 160%;
+	    font-weight: 550;
             font-family: 'Courier New';
             line-height: 1.2;
             color: #4B1F73;
