--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             r_text[32] = "While my higher self is part of me, so are the divine mothers.";
             r_text[33] = "Divine mothers and my higher self are all versions of me. That is why they are speaking through me. They are my soul family. ";
             r_text[34] = "People who are in my soul family, they see my soul, they see my heart, they see my purity. Those are the people that I am going to help!";
-            r_text[35] = "Magic and miracles are available to me every single day. I may not be see them, but they are here with me.";
+            r_text[35] = "Magic and miracles are available to me every single day. I may not see them, but they are here with me.";
             r_text[36] = "There is quality stuff at every frequency, and not quality stuff at every frequency.";
             r_text[37] = "My throat is powerful - I am meant to share a lot more about myself.";
             r_text[38] = "My story telling ability would naturally unfold for me.";
